# sushi_parking_munich_test_task

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  architecture_diagram.mmd  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  domain_registry.py  main.py
app/api/: chat.py
app/core/: __init__.py  llm_client.py  orchestrator.py  security.py  session_store.py  tool_dispatcher.py  tool_schemas.py
app/data/: parking.json  sushi.json
app/errors/: __init__.py  base.py  handlers.py
app/models/: __init__.py  place.py  requests.py  responses.py
app/observability/: logging.py
app/repositories/: __init__.py  base.py  parking_repository.py  sushi_repository.py
app/services/: __init__.py  base.py  geo_service.py  parking_service.py  sushi_service.py
app/validation/: dataset_validator.py  request_guard.py  tool_args.py  tool_response.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/__tests__/: ChatComposer.test.tsx  api.test.ts  geolocation.test.ts  setup.ts  useChatSession.test.ts
frontend/src/components/: ChatComposer.tsx  ChatHeader.tsx  ChatMessageItem.tsx  ChatMessageList.tsx  ChatStatus.tsx
frontend/src/hooks/: useChatSession.ts
frontend/src/lib/: api.ts  config.ts  geolocation.ts  logger.ts  types.ts
